added doctor clinic and doctor clinic link, get clinic list by doctor
