# src/models/clinic.model.ts
@@ -9,6 +9,7 @@ export interface Clinic extends BaseModel{
     address: String,
     phone: String[],
     website: String,
+    doctor: String[],
     clinicidentifiednumber: String, // clinic license or registration no
     clinicidentifiedphoto: String,
 }
@@ -16,9 +17,11 @@ export interface Clinic extends BaseModel{
 export interface ClinicInput{
     userid: String,
     clinicname: String,
+    owner: [],
     address: String,
     phone: [], 
     website: String,
+    doctor: [],
     clinicidentifiednumber: String,// clinic license or registration no
 }
 
@@ -26,14 +29,26 @@ export interface ClinicUpdateInput{
     clinicid: String,
     userid: String,
     clinicname: String,
+    owner: [],
     address: String,
     phone: [], 
+    doctor: [],
     website: String,
     clinicidentifiednumber: String,// clinic license or registration no
 }
 
-export interface GetClinicModel{
+export interface IGetClinicModel{
     userid: String
+}
+
+export interface ILinkDoctor{
+    userid: String,
+    doctorid: String,
+    clinicid: String
+}
+
+export interface ClinicDoctor extends BaseModel{
+    doctor: []
 }
 
 @singleton()
@@ -47,6 +62,7 @@ export default class ClinicClass {
         address: String,
         phone: [String],
         website: String,
+        doctor: [String],
         clinicidentifiednumber: String, // clinic license or registration no
         clinicidentifiedphoto: String,
         ...BaseModel
